fix: issue with clipping popups by browser interface on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5420,7 +5420,7 @@ footer .footer-bottom .links a:nth-child(1) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 25px;
+  gap: 0;
   height: 100%;
 }
 .fancybox__container .modal form {
@@ -6787,6 +6787,10 @@ margin-bottom: 24px;
 }
 .fancybox__container .cart .modal-flex__top {
   padding: 48px 35px 0 48px;
+  height: 1px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 @media screen and (max-width: 991px) {
   .fancybox__container .cart .modal-flex__top {
@@ -6871,6 +6875,8 @@ margin-bottom: 24px;
   height: calc(100vh - 350px - 48px - 48px - 3px);
   overflow-y: scroll;
   padding-right: 12px;
+  height: 1px;
+  flex-grow: 1;
 }
 .fancybox__container .cart-list .cart-list__item {
   margin-right: 7px;
@@ -6890,7 +6896,6 @@ margin-bottom: 24px;
 
 @media screen and (max-width: 991px) {
   .fancybox__container .cart-list {
-    height: calc(100vh - 350px - 24px - 8px);
   }
 }
 .fancybox__container .cart-list__item {
@@ -7744,6 +7749,7 @@ margin-bottom: 24px;
   padding: 10px 13px 8px;
   border-radius: 50px;
   cursor: pointer;
+  flex-shrink: 0;
 }
 .catalog-item__img-btn:hover {
   background: #60514f;
